[tool.poetry]
name = "accelerate_runner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tdl-client-python = "0.26.2"
coverage = "4.5.1"
pytest = "2.9.1"
pytest-cov = "2.1.0"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

